fix(workshops): truncate long titles

--- a/client/public/css/workshops.css
+++ b/client/public/css/workshops.css
@@ -66,6 +66,9 @@
     margin: 0;
     font-size: 24px;
     font-weight: 400;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .workshop-text h4 {
